--- a/index.html
+++ b/index.html
@@ -1,80 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Egy szuper oldal</title>
+    <title>Pair-Game</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <ul>
-        <li>
-            <a href="/index.html">Home</a>
-        </li>
-        <li>
-            <a href="/pages/products.html">Products</a>
-        </li>
-        <li>
-            <a href="/pages/orders.html">Orders</a>
-        </li>
-        <li>
-            <a href="/about.html">About</a>
-        </li>
-    </ul>
-    <h1>
-        Fantastic Burger
-    </h1>
-    <ul>
-        <li>Meat Lover
-            <ul>
-            <li>Marha</li>
-            <li>Pulyka</li>
-            <li>Malac</li>
-            </ul>
-        </li>
-        <li>Vega</li>
-        <li>Piedone</li>
-    </ul>
+    <div class="gameboard">
+        <div class="title">
+            <h2>Pair-Game</h2>
+        </div>
+        <div class="time">
+            <div class="h6">Timer: </div> <div class="time__display h4"> 00:00</div>
+        </div>
+        <div class="cardHolder">
+                <div class="card" data-card='1'>
+                    <div class="flip-box-front"></div>
+                    <div class="flip-box-back"></div>
+                </div>
+                <div class="card" data-card='2'>
+                    <div class="flip-box-front"></div>
+                    <div class="flip-box-back"></div>
+                </div>
+                <div class="card" data-card='3'>
+                    <div class="flip-box-front"></div>
+                    <div class="flip-box-back"></div>
+                </div>
+                <div class="card" data-card='4'>
+                    <div class="flip-box-front"></div>
+                    <div class="flip-box-back"></div>
+                </div>
+                <div class="card" data-card='5'>
+                    <div class="flip-box-front"></div>
+                    <div class="flip-box-back"></div> 
+                </div>
+                <div class="card" data-card='6'>
+                    <div class="flip-box-front"></div>
+                    <div class="flip-box-back"></div>
+                </div>
+                <div class="card" data-card='7'>
+                    <div class="flip-box-front"></div>
+                    <div class="flip-box-back"></div>
+                </div>
+                <div class="card" data-card='8'>
+                    <div class="flip-box-front"></div>
+                    <div class="flip-box-back"></div>
+                </div>
+                <div class="card" data-card='9'>
+                    <div class="flip-box-front"></div>
+                    <div class="flip-box-back"></div>
+                </div>
+                <div class="card" data-card='10'>
+                    <div class="flip-box-front"></div>
+                    <div class="flip-box-back"></div>
+                </div>
+        </div>
 
-    <h2>Feltét</h2>
-    <ol>
-        <li>Paprika</li>
-        <li>Alma</li>
-        <li>Csipős</li>
-    </ol>
-
-    <img width="300" src="img/burger.jpg" alt="hambi képe">
-    
-    <p></p>
-
-    <a target="blank" href="pages/orders.html">Orders</a>
-    <a href="index.html#eleres">Elerhetoseg</a>
-
-        <p>asd</p>
-
-        <p>asd</p>
-
-        <p>asd</p>
-
-        <p>asd</p>
-
-        <p>asd</p>
-
-        <p>asd</p>
-
-        <p>asd</p>
-
-        <p>asd</p>
-
-        <p>asd</p>
-
-        <p>asd</p>
-
-    <p></p>
-
-        <h3 id=eleres>Elerhetőség</h3>
-    
-    <p>Itt</p>
+    </div>
 
 
-    </body>
+
+    <script src="./js/main.js"></script>
+</body>
 </html>
