--- a/index.html
+++ b/index.html
@@ -1,87 +1,13 @@
-<!DOCTYPE html>
-<html lang="hu">
-
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pair-Game</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-
+  <meta charset="utf-8">
+  <title>StrAngTestBuildUpload</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.09e2c710755c8867a460.css"></head>
 <body>
-    <div class="gameboard">
-        <div class="title">
-            <h1>Pair-Game</h1>
-        </div>
-        <div class="time">
-            <div>
-                <h3>Timer: </h3>
-            </div>
-            <div class="time__display">
-                00:00
-            </div>
-        </div>
-        <div class="cardHolder">
-            <div class="card" data-card='1'>
-                <div class="flip-box-front"></div>
-                <div class="flip-box-back"></div>
-            </div>
-            <div class="card" data-card='2'>
-                <div class="flip-box-front"></div>
-                <div class="flip-box-back"></div>
-            </div>
-            <div class="card" data-card='3'>
-                <div class="flip-box-front"></div>
-                <div class="flip-box-back"></div>
-            </div>
-            <div class="card" data-card='4'>
-                <div class="flip-box-front"></div>
-                <div class="flip-box-back"></div>
-            </div>
-            <div class="card" data-card='5'>
-                <div class="flip-box-front"></div>
-                <div class="flip-box-back"></div>
-            </div>
-            <div class="card" data-card='6'>
-                <div class="flip-box-front"></div>
-                <div class="flip-box-back"></div>
-            </div>
-            <div class="card" data-card='7'>
-                <div class="flip-box-front"></div>
-                <div class="flip-box-back"></div>
-            </div>
-            <div class="card" data-card='8'>
-                <div class="flip-box-front"></div>
-                <div class="flip-box-back"></div>
-            </div>
-            <div class="card" data-card='9'>
-                <div class="flip-box-front"></div>
-                <div class="flip-box-back"></div>
-            </div>
-            <div class="card" data-card='10'>
-                <div class="flip-box-front"></div>
-                <div class="flip-box-back"></div>
-            </div>
-        </div>
-
-    </div>
-
-    
-    <div class="modal" tabindex="-1" role="dialog">
-        <div class="modal__content">
-            <header class="modal__head">
-                <h2>Congratulations!</h2>
-                <button class="modal__close">X</i></button>
-            </header>
-            <div class="modal__article">
-                <p>You win!</p>
-                <div class="timerstat"></div>
-            </div>
-        </div>
-    </div>
-
-
-    <script src="./js/main.js"></script>
-</body>
-
+  <app-root></app-root>
+<script src="runtime.7b63b9fd40098a2e8207.js" defer></script><script src="polyfills.94daefd414b8355106ab.js" defer></script><script src="main.ba68f966ad9b8fe4c663.js" defer></script></body>
 </html>
